--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -3,8 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Views</title>
+    <title>@ViewData["Title"]</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
