--- a/Views/Pages/Login.cshtml
+++ b/Views/Pages/Login.cshtml
@@ -1,8 +1,11 @@
-﻿@page
+﻿@page "/login"
 @model Views.Pages.LoginModel
 @{
     ViewData["Title"] = "Log in";
+    Layout = "_Authenticate";
 }
-<div class="w-screen h-screen">
-    <div class=""></div>
+<div class="">
+    <div class="">
+        <img src="~/images/static/banner.jpg" alt="">
+    </div>
 </div>
