--- a/Views/Pages/Login.cshtml
+++ b/Views/Pages/Login.cshtml
@@ -1,11 +1,32 @@
-﻿@page "/login"
+﻿@page "/Login"
 @model Views.Pages.LoginModel
 @{
     ViewData["Title"] = "Log in";
     Layout = "_Authenticate";
 }
-<div class="">
-    <div class="">
-        <img src="~/images/static/banner.jpg" alt="">
+<div class="vw-100 vh-100 position-relative">
+    <div class="w-100 h-100 position-fixed z-n1">
+        <img src="~/images/static/background.jpg" alt="" class="d-block w-100 h-100">
+    </div>
+    <div class="position-absolute top-50 start-50 w-25 translate-middle border border-secondary-subtle p-5"
+    style="border-radius: 2rem; backdrop-filter:blur(1rem)">
+        <p class="fs-1 text-light text-center">LOGIN TO CONTINUE</p>
+        <form method="post">
+            <div class="mb-5 w-100">
+                <label asp-for="Email" class="form-label text-light fs-2"></label>
+                <input type="email" class="form-control text-light" style="background: none; font-size: 1.6rem; border-radius:.7rem" asp-for="Email">
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="mb-5 w-100">
+                <label asp-for="Password" class="form-label text-light fs-2"></label>
+                <input type="password" class="form-control text-light" style="background: none; font-size: 1.6rem; border-radius:.7rem" asp-for="Password">
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <p class="mb-5 fs-3 text-danger">@ViewData["ErrorMessage"]</p>
+            <div class="mb-5 d-flex justify-content-center align-items-center">
+                <button type="submit" class="btn btn-primary pe-5 ps-5 fs-2 rounded-pill">Login</button>
+            </div>
+        </form>
+        <a asp-page="/Register" class="text-light fs-3 text-decoration-none text-center">Don't have an account? Register now</a>
     </div>
 </div>
