style navbar and footer done

--- a/Views/wwwroot/css/site.css
+++ b/Views/wwwroot/css/site.css
@@ -1,3 +1,6 @@
+:root {
+  --gradient-header: linear-gradient(rgba(115, 69, 214, 0.2) 0%, rgba(0, 93, 233, 0.1) 52.58%, rgba(106, 147, 207, 0) 100%);
+}
 *{
   margin: 0;
   padding: 0;
@@ -11,4 +14,6 @@ html{
 body{
   font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
+  
 }
+
