style homepage done

--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <button class="btn btn-outline-secondary" style="font-size: 1.6rem; border-radius: 10px">Create Ticket</button>
                 </div>
                 <div class="">
-                    <a href="#" class="btn btn-primary text-light" style="font-size: 1.6rem; border-radius: 10px">Sign In</a>
+                    <a href="/login" class="btn btn-primary text-light" style="font-size: 1.6rem; border-radius: 10px">Sign In</a>
                 </div>
             </div>
         </div>
