--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -29,13 +29,16 @@
                     <a href="/Tickets" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Tickets</a>
                 </li>
                 <li class="d-flex align-items-center">
-                    <a href="#" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">My Orders</a>
+                    <a href="/Orders" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">My Orders</a>
                 </li>
                 <li class="d-flex align-items-center">
                     <a href="/MyTickets" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">My Tickets</a>
                 </li>
                 <li class="d-flex align-items-center">
                     <a href="#" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Chats</a>
+                </li>
+                <li class="d-flex align-items-center">
+                    <a href="/Subscriptions" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Pricing</a>
                 </li>
             </ul>
             <div class="col-3 mb-2 d-flex align-items-center justify-content-end">
