--- a/Views/Pages/MyOrdersPage.cshtml
+++ b/Views/Pages/MyOrdersPage.cshtml
@@ -1,100 +1,61 @@
-﻿@page
+﻿@page "/Orders"
 @model Views.Pages.MyOrdersPageModel
-
 @{
-    ViewData["Title"] = "MyOrdersPage";
+    ViewData["Title"] = "My Orders";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
-
 <div class="container-fluid w-80 mx-auto" style="height: 100%">
-    <div class="row">
-        <nav class="col-md-3 col-lg-2 d-none d-md-block bg-light sidebar" style="border-right: 2px solid #ddd; height: 100%; box-shadow: none;">
-            <div class="position-sticky pt-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/HomePage" style="font-size: 1.6rem; padding: 10px; border-radius: 5px; transition: background-color 0.3s; color: black;">
-                            Home
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/ProfilePage" style="font-size: 1.6rem; padding: 10px; border-radius: 5px; transition: background-color 0.3s; color: black;">
-                            Profile
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/MyTicketsPage" style="font-size: 1.6rem; padding: 10px; border-radius: 5px; transition: background-color 0.3s; color: black;">
-                            My Tickets
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-page="/MyChatsPage" style="font-size: 1.6rem; padding: 10px; border-radius: 5px; transition: background-color 0.3s; color: black;">
-                            My Chats
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" asp-page="/MyOrdersPage" style="font-size: 1.6rem; background-color: #000; color: white; border-radius: 5px; padding: 10px;">
-                            My Orders
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <h1 class="text-center text-dark my-5">My Orders</h1>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered shadow-lg mx-auto" style="max-width: 90%; border-radius: 10px;">
-                    <thead class="bg-dark text-white">
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].ChatBox.Buyer)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].ChatBox.Seller)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].ChatBox.Ticket)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].Quantity)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].ChatBox.Status)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Order[0].CreateAt)
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.Order)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ChatBox.Buyer.Username)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ChatBox.Seller.Username)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ChatBox.Ticket.Title)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Quantity)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ChatBox.Status)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreateAt)
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-
-        </main>
+    <h1 class="text-center text-dark my-5">My Orders</h1>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered shadow mx-auto" style="max-width: 90%; border-radius: 10px;">
+            <thead class="bg-dark text-white">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].ChatBox.Buyer)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].ChatBox.Seller)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].ChatBox.Ticket)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].Quantity)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].ChatBox.Status)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Order[0].CreateAt)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Order)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ChatBox.Buyer.Username)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ChatBox.Seller.Username)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ChatBox.Ticket.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ChatBox.Status)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreateAt)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
 
@@ -104,11 +65,13 @@
         color: white;
     }
 
-    .nav-link, h1, .card-title {
+    .nav-link,
+    h1,
+    .card-title {
         color: black;
     }
 
-        .nav-link:hover {
-            background-color: lightgray;
-        }
+    .nav-link:hover {
+        background-color: lightgray;
+    }
 </style>
