--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     <a href="/MyTickets" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">My Tickets</a>
                 </li>
                 <li class="d-flex align-items-center">
-                    <a href="#" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Chats</a>
+                    <a href="/Chats" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Chats</a>
                 </li>
                 <li class="d-flex align-items-center">
                     <a href="/Subscriptions" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Pricing</a>
