--- a/Views/Pages/Chats/Index.cshtml
+++ b/Views/Pages/Chats/Index.cshtml
@@ -8,63 +8,49 @@
     <div class="col-3 p-3">
         <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Chat room</h1>
         <div class="w-100 overflow-y-auto overfow-x-hidden p-2 d-flex flex-column align-items-center">
-            <div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
+            <a href="/Chats/0" class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle text-decoration-none" role="button">
                 <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
+                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
                 </div>
                 <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
+                    <p class="mb-0 py-1 fs-4 fw-bold text-dark text-decoration-none">Chat room</p>
+                    <p class="mb-0 py-1 text-dark text-decoration-none">@DateTime.UtcNow</p>
                 </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
+            </a>
+            <a href="/Chats/0" class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle text-decoration-none" role="button">
                 <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
+                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
                 </div>
                 <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
+                    <p class="mb-0 py-1 fs-4 fw-bold text-dark text-decoration-none">Chat room</p>
+                    <p class="mb-0 py-1 text-dark text-decoration-none">@DateTime.UtcNow</p>
                 </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
+            </a>
+            <a href="/Chats/0" class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle text-decoration-none" role="button">
                 <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
+                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
                 </div>
                 <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
+                    <p class="mb-0 py-1 fs-4 fw-bold text-dark text-decoration-none">Chat room</p>
+                    <p class="mb-0 py-1 text-dark text-decoration-none">@DateTime.UtcNow</p>
                 </div>
-            </div><div class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle" role="button">
+            </a>
+            <a href="/Chats/0" class="w-100 p-2 row justify-content-center align-items-center border border-dark rounded-pill mb-3 bg-secondary-subtle text-decoration-none" role="button">
                 <div class="col-3">
-                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png"/>
+                    <img class="d-block w-100 h-100 object-fit-cover" src="~/images/static/user-avatar.png" />
                 </div>
                 <div class="col-9 fs-5">
-                    <p class="mb-0 py-1 fs-4 fw-bold">Chat room</p>
-                    <p class="mb-0 py-1">@DateTime.UtcNow</p>
+                    <p class="mb-0 py-1 fs-4 fw-bold text-dark text-decoration-none">Chat room</p>
+                    <p class="mb-0 py-1 text-dark text-decoration-none">@DateTime.UtcNow</p>
                 </div>
-            </div>
+            </a>
+
 
         </div>
     </div>
-    <div class="col-9 border-start p-3">
-        <h1 class="fs-1 text-dark fw-bold mb-3 pb-3 border-bottom">Messages</h1>
-        <div class="w-100 overflow-y-scroll p-3" style="min-height: calc(100vh - 355px);">
-            <div class="d-flex justify-content-start mb-3">
-                <div class="d-flex flex-column">
-                    <span class="fs-4 text-dark fw-bold">John Doe</span>
-                    <span class="fs-5 text-secondary">Hello, how are you?</span>
-                </div>
-            </div>
-            <div class="d-flex justify-content-end mb-3">
-                <div class="d-flex flex-column align-items-end">
-                    <span class="fs-4 text-dark fw-bold">Jane Doe</span>
-                    <span class="fs-5 text-secondary">I'm fine, thank you!</span>
-                </div>
-            </div>
+    <div class="col-9 border-start p-3" style="min-height: calc(100vh - 355px);">
+        <div class="d-flex justify-content-center align-items-center">
+            <h1 class="fw-bold">Please select a chat room to start message!!</h1>
         </div>
-        <form method="post" class="row justify-content-center px-3">
-            <div class="col-10 p-0">
-                <input type="text" class="form-control rounded-start-pill rounded-end-0" style="font-size:1.6rem" />
-            </div>
-            <button type="submit" class="btn btn-dark col-2 rounded-end-pill" style="font-size: 1.6rem;">Send</button>
-        </form>
     </div>
 </div>
