--- a/Views/Pages/Shared/_Layout.cshtml
+++ b/Views/Pages/Shared/_Layout.cshtml
@@ -41,9 +41,14 @@
                     <a href="/Subscriptions" class="nav-link px-2 link-dark text-dark fs-3 fw-semibold">Pricing</a>
                 </li>
             </ul>
-            <div class="col-3 mb-2 d-flex align-items-center justify-content-end">
+            <div class="col-3 mb-2 d-flex align-items-center justify-content-end h-100">
                 <a href="/Login" type="button" class="btn btn-outline-dark fs-3 px-5 me-1" >Login</a>
                 <a href="/Register" type="button" class="btn btn-outline-dark fs-3 px-5" >Register</a>
+                <div class="h-100">
+                    <a href="/Profile" class="d-block h-100" role="button">
+                        <img src="~/images/static/user-avatar.png" class="d-block h-100" />
+                    </a>
+                </div>
             </div>
         </div>
     </header>
