--- a/Views/Pages/SubscriptionPage/Index.cshtml
+++ b/Views/Pages/SubscriptionPage/Index.cshtml
@@ -32,7 +32,7 @@
                 <div class="card-footer d-flex justify-content-center gap-3">
                     <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-dark btn-lg btn-hover">Edit</a>
                     <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-dark btn-lg btn-hover">Delete</a>
-                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-dark btn-lg btn-hover">Buy Now</a>
+                    <a href="/Payment/@item.Id" class="btn btn-dark btn-lg btn-hover">Buy Now</a>
                 </div>
             </div>
         </div>
