--- a/Views/Pages/Shared/_Manager.cshtml
+++ b/Views/Pages/Shared/_Manager.cshtml
@@ -182,7 +182,7 @@
             </div>
         </div>
     </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.payos.vn/payos-checkout/v1/stable/payos-initialize.js"></script>
