--- a/Views/Pages/Tickets/CreateTicketPage.cshtml
+++ b/Views/Pages/Tickets/CreateTicketPage.cshtml
@@ -43,11 +43,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Ticket.TypeId" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Type<span class="text-danger">*</span></label>
-                    <select asp-for="Ticket.TypeId" class="form-control shadow-sm border-0" asp-items="ViewBag.TypeId">
+                    <label asp-for="Ticket.TypeId" class="control-label text-dark font-weight-bold" style="margin-top: 10px">
+                        Type<span class="text-danger">*</span>
+                    </label>
+                    <select asp-for="Ticket.TypeId" class="form-control shadow-sm border-0" asp-items="@(ViewData["TypeId"] as SelectList)">
                         <option selected>Select Ticket Type</option>
                     </select>
+                    <span asp-validation-for="Ticket.TypeId" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
@@ -78,7 +80,7 @@
                         style="margin-top: 10px" />
                 </div>
                 <div class="form-group text-center">
-                    <a asp-page="MyTicketsPage" class="btn btn-dark font-weight-bold btn-lg shadow-sm w-100"
+                    <a href="/MyTickets" class="btn btn-dark font-weight-bold btn-lg shadow-sm w-100"
                         style="margin-top: 10px">Back</a>
                 </div>
             </form>
