--- a/Views/Pages/Tickets/TicketDetailsPage.cshtml
+++ b/Views/Pages/Tickets/TicketDetailsPage.cshtml
@@ -17,7 +17,7 @@
             <div class="text-secondary border-bottom pb-3">
                 <p class="fs-1 fw-bold text-dark" style="text-align:justify;"><span class="badge fs-2 text-primary border-primary border">@Model.Ticket.Type.Type</span> @Model.Ticket.Title</p>
                 <p class="fs-2 " style="text-align:justify;">@Model.Ticket.Description</p>
-                <p class="d-flex justify-content-between align-items-center fs-2">Price: <span class="badge fs-2 text-success border-success border">@Model.Ticket.Price VNĐ</span></p>
+                <p class="d-flex justify-content-between align-items-center fs-2">Price: <span class="badge fs-2 text-success border-success border">@Model.Ticket.Price.ToString("#,##0 VNĐ")</span></p>
                 <p class="d-flex justify-content-between align-items-center fs-2">Quantity: <span class="badge fs-2 text-warning border-warning border">@Model.Ticket.Quantity</span></p>
                 <p class="d-flex justify-content-between align-items-center fs-2">Valid until: <span class="badge fs-2 text-danger border-danger border">@Model.Ticket.ExpiryDate</span></p>
             </div>
