--- a/Views/Pages/SubscriptionPage/Create.cshtml
+++ b/Views/Pages/SubscriptionPage/Create.cshtml
@@ -1,9 +1,17 @@
 ﻿@page
+@using Business
+@using Utils
 @model Views.Pages.SubscriptionPage.CreateModel
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Pages/Shared/_Layout.cshtml";
+    string? logedInUser = HttpContext.Session.GetString("LogedInUser");
+    User? user = logedInUser != null ? JsonUtil.ReadJsonItem<User>(logedInUser) : null;
+    if (user == null || user.RoleId == 3)
+    {
+        Response.Redirect("../Login");
+    }
 }
 
 <h1 class="text-center mb-4">Create Subscription</h1>
