--- a/Views/Pages/Profile/Edit.cshtml
+++ b/Views/Pages/Profile/Edit.cshtml
@@ -3,16 +3,25 @@
 @{
     ViewData["Title"] = "Profile";
     Layout = "_Layout";
+    var photoPath = "/images/static/" + (Model.Profile.Avatar ?? "user-avatar.png");
 }
 <div class="container-xl" style="min-height: calc(100vh - 70px - 244px); height:calc(100vh - 70px - 244px)">
     <div class="row w-100 h-100 justify-content-between">
         <div class="col-3 border-end border-dark-subtle">
             <div class="w-100">
-                <img class="d-block w-100 object-fit-cover" src="@Model.Profile.Avatar"/>
+                <img class="d-block w-100 object-fit-cover" src="@photoPath"/>
             </div>
+            <label class="col-sm-2 col-form-label" asp-for="Photo"></label>
+            <div class="col-sm-10">
+                <div class="custom-file">
+                    <input asp-for="Photo" class="custom-file-input form-control">
+                    <label class="custom-file-label">Click here to change avatar</label>
+                </div>
+            </div>
+
         </div>
         <div class="col-9">
-            <form method="post" class="w-100">
+            <form method="post" class="w-100" enctype="multipart/form-data">
                 <h1 class="text-center fw-semibold border-bottom py-3 mb-3">Your profile information</h1>
                 <div class="row py-3 mb-3 border-bottom">
                     <div class="col-4 fs-3">
@@ -44,4 +53,14 @@
         </div>
     </div>
 </div>
-
+@section Scripts
+{
+    <script>
+        $(document).ready(function() {
+            $('.custom-file-input').on('change', function() {
+                let fileName = $(this).val().split('\\').pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });
+    </script>
+}
