--- a/Views/Pages/MyTicketsPage.cshtml
+++ b/Views/Pages/MyTicketsPage.cshtml
@@ -18,7 +18,7 @@
             {
                 <div class="col-3 mb-4 text-black fs-3 font-bold">
                     <div class="card w-100 shadow">
-                        <img src="@item.Image" class="card-img-top" style="height: 25rem; object-fit: cover;" />
+                        <img src="~/images/@item.Image" asp-append-version="true" class="card-img-top" style="height: 25rem; object-fit: cover;" />
                         <div class="card-body fs-4 text-secondary">
                             <p class="card-title fw-bold text-capitalize text-dark" style="text-align: justify">@item.Title</p>
                             <p class="card-text w-100" style="text-align: justify;">@item.Description</p>
