--- a/Views/Pages/Tickets/TicketDetailsPage.cshtml
+++ b/Views/Pages/Tickets/TicketDetailsPage.cshtml
@@ -10,7 +10,7 @@
     <div class="row justify-content-between align-items-start">
         <div class="col-6">
             <div class="w-100">
-                <img src="@Model.Ticket.Image" class="d-block w-100"/>
+                <img src="~/images/@Model.Ticket.Image" asp-append-version="true" class="d-block w-100" />
             </div>
         </div>
         <div class="col-6 px-3 ">
